--- a/src/input.css
+++ b/src/input.css
@@ -7,7 +7,27 @@
 
 body {
     background-color: #070C0F;
+    cursor: none;
     /* scroll-behavior: slow; */
+}
+
+.about-unique::after {
+    content: '';
+    width: 100%;
+    height: 1px;
+    background-color: #A7A7A7;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+    transition: ease-in-out;
+    transition-duration: 300ms;
+    /* background-color: #258287; */
+}
+
+.about-unique:hover:after {
+    height: 20px;
+    background-color: #0088c6;
 }
 
 /* .scroll-wrapper {
