--- a/src/input.css
+++ b/src/input.css
@@ -5,10 +5,28 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
+@keyframes bg-animation {
+    0% {
+        background-position: 0% 0%;
+    }
+
+    50% {
+        background-position: 100% 100%;
+    }
+
+    100% {
+        background-position: 0% 0%;
+    }
+}
+
 body {
     background-color: #070C0F;
     cursor: none;
     /* scroll-behavior: slow; */
+}
+
+.text-bg {
+    animation: bg-animation 7.5s cubic-bezier(0.3, 0, 0.7, 1) infinite;
 }
 
 .about-unique::after {
