About you improve

--- a/src/input.css
+++ b/src/input.css
@@ -20,7 +20,7 @@
 }
 
 body {
-    background-color: #070C0F;
+    background-color: #1C1D20;
     cursor: none;
     overflow-x: hidden;
     /* scroll-behavior: slow; */
@@ -34,18 +34,26 @@ body {
 }
 
 .blurred {
-    background-color: #070c0f84 !important;
+    background-color: #1c1d205b !important;
     backdrop-filter: blur(75px) !important;
 }
 
-a, button {
+a, button, form, label, input, textarea {
     cursor: none;
+}
+
+input:focus,
+select:focus,
+textarea:focus,
+button:focus {
+    outline: none;
 }
 
 .active {
     color: white !important;
     font-weight: 600;
     background-color: #00B0FF;
+    border-radius: 0px !important;
 }
 
 @media only screen and (min-width: 576px) {
@@ -79,22 +87,41 @@ a, button {
     background-color: #0088c6;
 }
 
-/* .scroll-wrapper {
-    width: 100vw;
-    height: 100vh;
-    overflow-y: auto;
-    overflow-x: hidden;
-    perspective: 100px;
-    transform-style: preserve-3d;
-}
+/* #cursor1 {
+    background: white;
+    background: linear-gradient(90deg,
+        rgba(2, 0, 36, 1) 0%,
+        rgba(118, 9, 121, 1) 49%,
+        rgba(0, 212, 255, 1) 100%);
+    animation: follower 4s infinite;
 
-.scroll-wrapper2 {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: -10px;
-    margin: 0;
-    padding: 0;
-    transform: translateZ(-100px) scale(2);
+    transition: 0s;
+    pointer-events: none;
+    mix-blend-mode: difference;
+} */
+
+/* .cursor1.active {
+    width: 100px !important;
+    height: 100px !important;
+} */
+
+/* nav:hover ~ #cursor1 {
+    transform: scale(5);
+} */
+
+/* @keyframes follower {
+    from {
+        background: rgb(2, 0, 36);
+        background: linear-gradient(90deg,
+                rgba(2, 0, 36, 1) 0%,
+                rgba(118, 9, 121, 1) 49%,
+                rgba(0, 212, 255, 1) 100%);
+    }
+
+    to {
+        background: rgb(171, 169, 4);
+        background: linear-gradient(90deg,
+                rgba(171, 169, 4, 1) 0%,
+                rgba(0, 255, 93, 1) 100%);
+    }
 } */
