--- a/src/article.css
+++ b/src/article.css
@@ -15,6 +15,24 @@ section {
     line-height: 1.8;
 }
 
+@media screen and (min-width: 1280px) {
+    .main-article p {
+        margin-bottom: 20px;
+        color: #777;
+        font-size: 24px;
+        line-height: 1.8;
+    }
+}
+
+@media screen and (min-width: 1536px) {
+    .main-article p {
+        margin-bottom: 20px;
+        color: #777;
+        font-size: 28px;
+        line-height: 1.8;
+    }
+}
+
 @media screen and (max-width: 420px) {
     .main-article p {
         margin-bottom: 20px;
